Removed use of Java 17 preview features because of JDK/IntelliJ Compilation Bug. TODO: Rollback once fixed